<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="app_name">狸猫搜索-搜片神器</string>
    <string name="action_settings">Settings</string>
    <string name="action_init_data">这个地方暂时没有内容所以不显示</string>
    <string name="hello_world">Hello world!</string>
    <string name="play_source_text">播放来源</string>
    <string name="play_info_text">简介</string>
    <string name="str_correlation_recommend">相关推荐</string>
    <string name="play_share_text">分享好友</string>
    <string name="recommend_button_name">加载更多</string>
    <string name="str_cache_text">缓存</string>
    <string name="str_game_app_text">游戏应用</string>
    <string name="str_transpond_text">转发</string>
    <string name="str_collect_text">收藏</string>
    <string name="str_message_comment">评论</string>
    <string name="str_reply_comment">回复</string>
    <string name="str_System_Notifications">系统回复</string>
    <string name="str_notification_get_time">通知接受时段</string>
    <string name="str_news_notification">消息通知</string>
    <string name="str_news_system">系统通知</string>
    <string name="str_test_style">测试字样</string>
    <string name="str_home_title_featured_text">精选</string>
    <string name="str_home_title_china_text">大陆</string>
    <string name="str_home_title_tvb_text">港台</string>
    <string name="str_home_title_jandk_text">日韩</string>
    <string name="str_home_title_america_text">欧美</string>
    <string name="str_home_title_more_text">更多</string>
    <string name="str_cache_load">正在缓存</string>
    <string name="str_load">正在加载...</string>
    <string name="str_video">视频</string>
    <string name="str_program">节目</string>
    <string name="str_movie">电影</string>
    <string name="str_television">电视</string>
    <string name="str_anime">动漫</string>
    <string name="play_credits_now">立即播放</string>
    <string name="see_details">查看详情</string>
    <string name="str_name">名字</string>
    <string name="str_trytry">试一试</string>
    <string name="str_curretnaccount">当前帐号</string>
    <string name="str_phonecheck">手机验证码</string>
    <string name="str_send">发送</string>
    <string name="str_otheraccoutn">另一个帐号</string>
    <string name="str_mailcheck">邮箱验证</string>
    <string name="str_oldpassword">原始码</string>
    <string name="str_newpassword">新密码</string>
    <string name="str_againpassword">再次输入</string>
    <string name="str_headicon">头像</string>
    <string name="str_gender">性别</string>
    <string name="str_init_text">初始化...</string>
    <string name="vitamio_videoview_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="vitamio_videoview_error_button">OK</string>
    <string name="vitamio_videoview_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to
		this device.</string>
    <string name="vitamio_videoview_error_title">Cannot play video</string>
    <string name="facebook_app_id">TODO</string>
    <string name="state_not_resource">暂未开通，敬请期待！</string>
    <string name="load_error">网络请求失败,请刷新</string>
    <string name="has_no_more">没有更多数据</string>
    <string name="load_more">加载更多</string>
    <string name="loading">正在加载……</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="text_bf_num" formatted="false">%s次播放</string>
    <string name="textfans_num" formatted="false">%s粉丝</string>

</resources>