<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_root_bg"
    android:orientation="vertical" >

    <include layout="@layout/app_head_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp50"
        android:background="@color/bg_white"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/layout_message_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <View
                android:id="@+id/line_message_comment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_alignParentBottom="true"
                android:background="@color/main_color" />

            <TextView
                android:id="@+id/tv_message_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/str_message_comment"
                android:textColor="@color/main_color"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_reply_comment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <View
                android:id="@+id/line_reply_comment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_gray" />

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:background="@color/bg_gray" />

            <View
                android:layout_width="@dimen/dp1"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:background="@color/bg_gray" />

            <TextView
                android:id="@+id/tv_reply_comment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/str_reply_comment"
                android:textColor="@color/word_black"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_System_Notifications"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <View
                android:id="@+id/line_System_Notifications"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp1"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_gray" />

            <TextView
                android:id="@+id/tv_System_Notifications"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/str_System_Notifications"
                android:textColor="@color/word_black"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.limaoso.phonevideo.view.RefreshListView
            android:id="@+id/message_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_white"
            android:divider="#00000000"
            android:dividerHeight="0dip"
            android:listSelector="#00000000" >
        </com.limaoso.phonevideo.view.RefreshListView>

        <ProgressBar
            android:id="@+id/pb_message_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/custom_progress"
            android:indeterminateDuration="700" />
    </FrameLayout>

</LinearLayout>