<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_root_bg"
    android:orientation="vertical" >

    <include layout="@layout/app_head_title" />

    <View
        style="@style/horizontal_partition_line_style"
        android:layout_marginTop="@dimen/dp20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/rl_modifypassword_oldpassword"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_white" >

            <TextView
                android:id="@+id/tv_modifypassword_oldpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="center_vertical"
                android:text="@string/str_oldpassword"
                android:textColor="@color/word_greyblack" />

            <EditText
                android:id="@+id/et_modifypassword_old"
                style="@style/base_edtitext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp44"
                android:layout_below="@+id/tv_modifypassword_oldpassword"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/shape_border_grey_blackline"
                android:hint="6-16位数字、字母"
                android:paddingLeft="@dimen/dp10"
                android:textColorHint="@color/bg_white" />
        </RelativeLayout>

        <View
            android:id="@+id/v_modifypassword_line"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp0.2"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/app_line_network" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_white" >

            <TextView
                android:id="@+id/tv_modifypassword_newpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="center_vertical"
                android:text="@string/str_newpassword"
                android:textColor="@color/word_greyblack" />

            <EditText
                android:id="@+id/et_modifypassword_new1"
                style="@style/base_edtitext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp44"
                android:layout_below="@+id/tv_modifypassword_newpassword"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/shape_border_grey_blackline" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.2dip"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/app_line_network" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp80"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/bg_white" >

            <TextView
                android:id="@+id/tv_modifypassword_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="center_vertical"
                android:text="@string/str_againpassword"
                android:textColor="@color/word_greyblack" />

            <EditText
                android:id="@+id/et_modifypassword_new2"
                style="@style/base_edtitext"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp44"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_modifypassword_again"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp15"
                android:layout_marginRight="@dimen/dp20"
                android:layout_marginTop="@dimen/dp15"
                android:background="@drawable/shape_border_grey_blackline" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp44"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp30" >

            <TextView
                android:id="@+id/tv_modifypassword_submit"
                android:layout_width="@dimen/dp135"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp20"
                android:background="@drawable/shape_border_maincolor"
                android:gravity="center"
                android:text="提交"
                android:textColor="@color/bg_white" />

            <TextView
                android:id="@+id/tv_modifypassword_reset"
                android:layout_width="@dimen/dp135"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp20"
                android:background="@drawable/shape_border_maincolor"
                android:gravity="center"
                android:text="重置"
                android:textColor="@color/bg_white" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:background="@color/bg_white" />
    </LinearLayout>

    <View style="@style/horizontal_partition_line_style" />

</LinearLayout>